--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,7 @@ jobs:
       env:
         CI: "true"
     - name: Build
-      run: |
-        npm run build
+      run: npm run build
       env:
         CI: "true"
     - name: 'Upload artifact'
